# ChessAI

./: .gitignore  play_chess.py  pyproject.toml  qlearning_trainer.py
chess_model/: chess_game.py  chess_utils.py
data/ppo_model/: loss.csv  value_network.weights.h5
src/: play_chess.py
src/chess_helper/: chess_utils.py
src/chessai/: play_chess.py
src/chessai/chess_helper/: chess_utils.py
src/chessai/common/: variables.py
src/chessai/gui/: draw_gui.py
src/chessai/models/: base_bot.py  ppo_bot.py  qlearning_bot.py
src/chessai/models/ppo_model/: PPO_model.py  __init__.py
src/models/: base_bot.py
src/models/ppo_model/: PPO_model.py
src/models/qlearning/: qlearning_trainer.py
test/: chess_utils_test.py
