[project]
name = "chessai"
dynamic = ["version"]

dependencies = [
  "chess",
  "pygame",
  "tensorflow"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.autopep8]
max_line_length = 120

[tool.black]
line-length = 120
list-line-length = 1
